Made the login and register work better with dtos.
Made the login and register work better with dtos, not jsut strait up inputting them, but actually breaking them down before inputting. Removed the registers not used input variable. Made it so that the register now check properly for empty inputs.